add_subdirectory(tio)
add_subdirectory(tio_addons)
add_subdirectory(tio_vfs)
#add_subdirectory(tio_archive)
#add_subdirectory(tbspx)
add_subdirectory(tws)

option(TIO_ADDON_ZIP "Build support for inflate/deflate (zip) compression?" TRUE)
if(TIO_ADDON_ZIP)
    add_subdirectory(tio_zip)
endif()

option(TIO_ADDON_ZSTD "Build support for zstd compression?" FALSE)
if(TIO_ADDON_ZSTD)
    add_subdirectory(tio_zstd)
endif()

add_library(nolibc nolibc.c nolibc.h)
hide_symbols(nolibc)
if(MSVC)
    target_link_options(nolibc PRIVATE /NODEFAULTLIB )
else()
    target_compile_options(nolibc PRIVATE -fno-builtin -nostdlib)
endif()

add_subdirectory(sc)
